...
                borderRadius: BorderRadius.circular(8.0),
                color: ITunesColors.darkGreyColor),
            child: Row(
              children: [
                Expanded(
                  child: ElevatedButton(
                    key: const ValueKey("gridView"),
                    style: ElevatedButton.styleFrom(
                        elevation: 0,
                        tapTargetSize: MaterialTapTargetSize.shrinkWrap,
                        padding: EdgeInsets.zero,
                        shadowColor: Colors.transparent,
                        backgroundColor: selectedLayout == "grid"
...
                    },
                    child: const Text('Grid Layout'),
                  ),
                ),
                Expanded(
                  child: ElevatedButton(
                    key: const ValueKey("listView"),
                    style: ElevatedButton.styleFrom(
                        elevation: 0,
                        tapTargetSize: MaterialTapTargetSize.shrinkWrap,
                        padding: EdgeInsets.zero,
                        shadowColor: Colors.transparent,
                        backgroundColor: selectedLayout == "list"
...
