...

  @override
  Widget build(BuildContext context) {
    Size screenSize = MediaQuery.of(context).size;
    ref.listen<ResponseState>(searchNotifierProvider,
        (ResponseState? previous, ResponseState next) {
      if (next.head == "search") {
        if (next.isLoading!) {
          showProgress(context);
        } else if (next.isError! && !next.isLoading!) {
          Navigator.pop(context);
          showMessage(context, next.errorMessage!);
        } else {
...
                  child: const ParameterFilters(),
                ),
                const SizedBox(
                  height: 50,
                ),
                ElevatedButton(
                  key: const ValueKey("submit"),
                  onPressed: () {
                    onButtonPressed(context: context);
                  },
                  child: const Text('Submit'),
                ),
              ],
...
